testdata/language-features/guard/guard12.reject.out
type error: can not unify
  Char
with
  ()
in ./testdata/language-features/guard/guard12.reject.lc:1:13:
fun x | x = () | otherwise = 'a'
            ^^
------------ trace
!type error: can not unify
  Char
with
  ()
in ./testdata/language-features/guard/guard12.reject.lc:1:13:
fun x | x = () | otherwise = 'a'
            ^^
------------ tooltips
1:13-1:15
    ()
1:30-1:33
    Char